Updated LinkedIn URL

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author:
 name:              Luca Della Toffola
 url:               http://lucadt.github.io
 github_username:   lucadt
-linkedin_username: luca-della-toffola-93094284
+linkedin_username: luca-della-toffola
 
 # Markdown specs
 markdown: kramdown
